1st version of the market simulator project!

--- a/static/styles.css
+++ b/static/styles.css
@@ -30,3 +30,10 @@ nav .navbar-brand .green
 .title2 {
     line-height: 40pt;
 }
+
+/* .navbar-brand {
+    font-size: xx-large;
+    font-weight: bold;
+    color: #007bff; 
+} */
+
