--- a/templates/buy.html
+++ b/templates/buy.html
@@ -4,20 +4,64 @@
     Buy
 {% endblock %}
 
+<!-- <table style="float: right;">
+    <tr>
+        <td>Yes </td>
+    </tr>
+    <tr>
+        <td>No  </td>
+    </tr>
+</table> -->
+
 {% block main %}
-    <form action="/buy" method="post">
+
+
+
+    <form action="/buy" method="post" class="tabela">
         <input autocomplete="off" autofocus name="symbol" placeholder="Symbol" type="text">
         <input autocomplete="off" name="shares" placeholder="Number of Shares" type="text">
         <button type="submit">Buy</button>
     </form>
-    <br>
-    <br>
-
+    <br><br>
 
     <form action="/add" method="post">
         Add money to your account:
         <input name="add" placeholder="Add amount of cash" type="number" step="0.01" min="1">
         <button type="submit">Add</button>
+        <br><br><br>
+
+        <table style="margin: auto;" class="table table-sm w-25 p3 table-dark">  <!-- style="float: right;" -->
+            <thead>
+                <tr>
+                    <th colspan="3"> TOP 10 trending stocks </th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <th>Stock</th>
+                    <th>Number of transactions</th>
+                    <th>Current price</th>
+                </tr>
+                {% for x in stock_table %}
+                <tr>
+                    
+                    <td>{{x["stock_name"]}}</td>
+                    <td>{{x["COUNT(stock_name)"]}}</td>
+                    <td>{{usd(x["price"])}}</td>
+        
+                </tr>
+                {% endfor %}
+                 <!-- <tr>
+                    <td>CASH</td>
+                    <td colspan=2></td>
+                    <td>{{luzers}}</td>
+                </tr> -->
+            </tbody>
+        </table>
     </form>
+    <br>
+
+
+  
 
 {% endblock %}
