--- a/templates/layout.html
+++ b/templates/layout.html
@@ -24,7 +24,10 @@
 
         <nav class="bg-light border navbar navbar-expand-md navbar-light">
             <div class="container-fluid">
-                <a class="navbar-brand" href="/"><span class="blue">C</span><span class="red">$</span><span class="yellow">5</span><span class="green">0</span> <span class="red">Finance</span></a>
+                <a class="navbar-brand" href="/">
+                    <span class="blue">Stock Market</span> <!-- <span class="red">$</span><span class="yellow">5</span><span class="green">0</span> --> 
+                    <span class="navbar-brand">
+                        Simulator</span></a>
                 <button aria-controls="navbar" aria-expanded="false" aria-label="Toggle navigation" class="navbar-toggler" data-bs-target="#navbar" data-bs-toggle="collapse" type="button">
                     <span class="navbar-toggler-icon"></span>
                 </button>
@@ -35,6 +38,9 @@
                             <li class="nav-item"><a class="nav-link" href="/buy">Buy</a></li>
                             <li class="nav-item"><a class="nav-link" href="/sell">Sell</a></li>
                             <li class="nav-item"><a class="nav-link" href="/history">History</a></li>
+                            <li class="nav-item"><a class="nav-link" href="/Forum">Forum</a></li>
+                            <li class="nav-item"><a class="nav-link" href="/portfolios">Users Portfolios</a></li>
+                            <li class="nav-item"><a class="nav-link" href="/activity">Users Activity</a></li>
                         </ul>
                         <ul class="navbar-nav ms-auto mt-2">
                             <li class="nav-item"><a class="nav-link" href="/logout">Log Out</a></li>
@@ -59,8 +65,16 @@
 
         <main class="container py-5 text-center">
             {% block main %}{% endblock %}
+            <br><br><br><br><br><br>
+            <form action="/" method="get">
+                <button style="margin: auto;" class="btn btn-dark" type="submit"> Go back to the main page </button>
+            </form>
         </main>
 
+        
+
+
+        <br><br><br><br><br><br><br><br><br><br><br><br><br><br>
         <footer class="mb-5">
 
             <p class="mb-3 small text-center text-muted">
