--- a/templates/login.html
+++ b/templates/login.html
@@ -15,3 +15,5 @@
         <button class="btn btn-primary" type="submit">Log In</button>
     </form>
 {% endblock %}
+
+<!-- taken from CS50 course -->
