--- a/templates/index.html
+++ b/templates/index.html
@@ -5,6 +5,7 @@
 {% endblock %}
 
 {% block main %}
+ <h1 class="title">Hi, {{juser}} </h1>
  <br>
 
  <h2 class="title2">This is your stock portfolio:</h2>
